# LLM_gmgn

./: .gitignore  README.md  pyproject.toml
config/: config.example.yaml  keys.example.yaml
src/bot/: config.py  engine.py  main.py  models.py
src/bot/adapters/: dexscreener.py  farcaster.py  geckoterminal.py  jetstream.py  reddit.py  rss.py
src/bot/execution/: executor.py  gmgn_sol.py  plan.py  policy.py
src/bot/features/: hype.py  market.py  news.py
src/bot/llm/: perplexity_client.py  router.py
src/bot/signals/: scorer.py  strategy.py
src/bot/utils/: alerts.py  amm_decode.py  authors.py  circuit_breaker.py  control.py  db.py  filters.py  keys.py  logging.py  portfolio_risk.py  solana.py  text.py
tests/: README.md  test_circuit_breaker.py  test_hype_aggregator.py  test_portfolio_risk.py
