[project]
name = "solana-hype-gmgn-bot"
version = "0.8.0"
description = "Solana hype/news trading bot using Perplexity.ai (Perplexity-first) + GMGN execution with positions & exit logic"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "orjson>=3.10",
    "httpx[http2]>=0.27",
    "websockets>=12.0",
    "feedparser>=6.0",
    "tenacity>=9.0",
    "python-dotenv>=1.0",
    "solders>=0.26",
    "pyyaml>=6.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=15",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "jinja2>=3.1",
]
[tool.setuptools]
package-dir = {"" = "src"}
[tool.ruff]
line-length = 100
