[project]
name = "solana-hype-gmgn-bot"
version = "0.9.0"
description = "Solana hype/news trading bot using Perplexity.ai (Perplexity-first) + GMGN execution with positions & exit logic, circuit breaker, portfolio risk management"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "orjson>=3.10",
    "httpx[http2]>=0.27",
    "websockets>=12.0",
    "feedparser>=6.0",
    "tenacity>=9.0",
    "python-dotenv>=1.0",
    "solders>=0.26",
    "pyyaml>=6.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=15",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
